WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
315421
Google Docs: Typing in "Hindi - InScript" can result in an unexpected beep
https://bugs.webkit.org/show_bug.cgi?id=315421
Summary
Google Docs: Typing in "Hindi - InScript" can result in an unexpected beep
Ryosuke Niwa
Reported
2026-05-23 05:09:59 PDT
Typing using "Hindi - InScript" input method can result in unexpected beeps. <
rdar://177643899
>
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2026-05-23 05:13:45 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/65534
EWS
Comment 2
2026-05-24 09:48:25 PDT
Committed
313813@main
(abcaf42866b1): <
https://commits.webkit.org/313813@main
> Reviewed commits have been landed. Closing PR #65534 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug