Google Docs: Typing in "Hindi - InScript" can result in an unexpected beep https://bugs.webkit.org/show_bug.cgi?id=315421 rdar://177643899

Reviewed by Wenson Hsieh.

The bug was caused by the missing check for defaultPrevented and defaultHandled for keypress event
when we take an early exit.

Test: TestWebKitAPI.WKWebViewMacEditingTests.HindiInScriptViramaConjunctReportsKeystrokeHandled

* Source/WebCore/page/EventHandler.cpp:
(WebCore::EventHandler::internalKeyEvent):
* Tools/TestWebKitAPI/Tests/WebKit/WKWebView/mac/WKWebViewMacEditingTests.mm:
(-[KeyableBorderlessWindow canBecomeKeyWindow]):
(-[KeyableBorderlessWindow unhandledKeyDownCount]):
(-[KeyableBorderlessWindow noResponderFor:]):
(TestWebKitAPI::TEST(WKWebViewMacEditingTests, HindiInScriptViramaConjunctReportsKeystrokeHandled)):

Canonical link: https://commits.webkit.org/313813@main